# PickleRank

./: .bugbot.yml  .coderabbit.yaml  .editorconfig  .env.example  .gitignore  PRD.md  README.md  STRUCTURE.md  vercel.json
backend/: .env.example  README.md  pyproject.toml  requirements.txt  run_migration.py  test_query.py  vercel.json
backend/app/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
backend/app/api/: __init__.py
backend/app/api/middleware/: __init__.py  security.py
backend/app/api/routers/: __init__.py  events.py  games.py  groups.py  health.py  players.py  rankings.py
backend/app/api/schemas/: __init__.py  common.py  event_updates.py  events.py  games.py  groups.py  players.py  rankings.py
backend/app/application/: __init__.py
backend/app/application/services/: __init__.py  event_service.py  group_service.py  player_service.py  ranking_service.py
backend/app/domain/: __init__.py
backend/app/domain/matchmaking/: __init__.py  constraints.py  generator.py
backend/app/domain/ratings/: __init__.py  base.py  catch_up_elo.py  factory.py  racs_elo.py  serious_elo.py
backend/app/infrastructure/: __init__.py  cache.py
backend/app/infrastructure/auth/: __init__.py  clerk_jwt.py
backend/app/infrastructure/db/: __init__.py  connection.py
backend/app/infrastructure/repositories/: __init__.py  audit_repo.py  events_repo.py  (+4 more)
backend/tests/: conftest.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py  test_constraints.py  test_generator_determinism.py  test_ratings_catchup.py  test_ratings_serious.py
(+67 files in other folders)
